get conda-forge highfive

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,6 +30,7 @@ requirements:
     - pkg-config
     - {{ posix }}diffutils
     - {{ posix }}patch
+    - highfive < 3
   host:
     - r-base
     - r-matrix
