--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,6 +47,7 @@ requirements:
     - zlib
     - hdf5 >=1.10
     - llvm-openmp  # [osx]
+    - libgomp      # [win]
     - libblas
     - libcblas
     - liblapack
