--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -127,7 +127,7 @@ about:
   license: GPL-2.0-or-later
   summary: '''Rcpp'' bindings for ''PLANC'', a highly parallel and extensible NMF/NTF  (Non-negative Matrix/Tensor Factorization) library. Wraps algorithms described in Kannan et. al (2018) <doi:10.1109/TKDE.2017.2767592> and Eswar et. al (2021) <doi:10.1145/3432185>. Implements algorithms described in Welch et al. (2019) <doi:10.1016/j.cell.2019.05.006>, Gao et al. (2021) <doi:10.1038/s41587-021-00867-x>, and Kriebel & Welch (2022) <doi:10.1038/s41467-022-28431-4>.'
   license_file:
-    - ${{ env.get("PREFIX") }}/lib/R/share/licenses/GPL-2
+    - LICENSE-GPL.md
   homepage: https://github.com/welch-lab/rcppplanc
 
 extra:
