escape parens for unix

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -119,7 +119,7 @@ requirements:
 tests:
   - script:
       - if: not win
-        then: Rscript -e \"library('RcppPlanc')\"
+        then: Rscript -e \"library\('RcppPlanc'\)\"
       - if: win
         then: Rscript -e \"library('RcppPlanc')\"
 
