work around r-base defaults

--- a/pixi.toml
+++ b/pixi.toml
@@ -18,30 +18,30 @@ rattler-build = "*"
 [tasks]
 inspect-all = "inspect_artifacts --all-packages"
 build = "rattler-build build --recipe recipe"
-"build-linux_64_r_base4.3" = "rattler-build build --recipe recipe -m .ci_support/linux_64_r_base4.3.yaml"
-"inspect-linux_64_r_base4.3" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_64_r_base4.3.yaml"
-"build-linux_64_r_base4.4" = "rattler-build build --recipe recipe -m .ci_support/linux_64_r_base4.4.yaml"
-"inspect-linux_64_r_base4.4" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_64_r_base4.4.yaml"
-"build-linux_aarch64_r_base4.3" = "rattler-build build --recipe recipe -m .ci_support/linux_aarch64_r_base4.3.yaml"
-"inspect-linux_aarch64_r_base4.3" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_aarch64_r_base4.3.yaml"
-"build-linux_aarch64_r_base4.4" = "rattler-build build --recipe recipe -m .ci_support/linux_aarch64_r_base4.4.yaml"
-"inspect-linux_aarch64_r_base4.4" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_aarch64_r_base4.4.yaml"
-"build-linux_ppc64le_r_base4.3" = "rattler-build build --recipe recipe -m .ci_support/linux_ppc64le_r_base4.3.yaml"
-"inspect-linux_ppc64le_r_base4.3" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_ppc64le_r_base4.3.yaml"
-"build-linux_ppc64le_r_base4.4" = "rattler-build build --recipe recipe -m .ci_support/linux_ppc64le_r_base4.4.yaml"
-"inspect-linux_ppc64le_r_base4.4" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_ppc64le_r_base4.4.yaml"
-"build-osx_64_r_base4.3" = "rattler-build build --recipe recipe -m .ci_support/osx_64_r_base4.3.yaml"
-"inspect-osx_64_r_base4.3" = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_64_r_base4.3.yaml"
-"build-osx_64_r_base4.4" = "rattler-build build --recipe recipe -m .ci_support/osx_64_r_base4.4.yaml"
-"inspect-osx_64_r_base4.4" = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_64_r_base4.4.yaml"
-"build-osx_arm64_r_base4.3" = "rattler-build build --recipe recipe -m .ci_support/osx_arm64_r_base4.3.yaml"
-"inspect-osx_arm64_r_base4.3" = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_arm64_r_base4.3.yaml"
-"build-osx_arm64_r_base4.4" = "rattler-build build --recipe recipe -m .ci_support/osx_arm64_r_base4.4.yaml"
-"inspect-osx_arm64_r_base4.4" = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_arm64_r_base4.4.yaml"
-"build-win_64_r_base4.3" = "rattler-build build --recipe recipe -m .ci_support/win_64_r_base4.3.yaml"
-"inspect-win_64_r_base4.3" = "inspect_artifacts --recipe-dir recipe -m .ci_support/win_64_r_base4.3.yaml"
-"build-win_64_r_base4.4" = "rattler-build build --recipe recipe -m .ci_support/win_64_r_base4.4.yaml"
-"inspect-win_64_r_base4.4" = "inspect_artifacts --recipe-dir recipe -m .ci_support/win_64_r_base4.4.yaml"
+"build-linux_64_r_base4.3._" = "rattler-build build --recipe recipe -m .ci_support/linux_64_r_base4.3._.yaml"
+"inspect-linux_64_r_base4.3._" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_64_r_base4.3._.yaml"
+"build-linux_64_r_base4.4._" = "rattler-build build --recipe recipe -m .ci_support/linux_64_r_base4.4._.yaml"
+"inspect-linux_64_r_base4.4._" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_64_r_base4.4._.yaml"
+"build-linux_aarch64_r_base4.3._" = "rattler-build build --recipe recipe -m .ci_support/linux_aarch64_r_base4.3._.yaml"
+"inspect-linux_aarch64_r_base4.3._" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_aarch64_r_base4.3._.yaml"
+"build-linux_aarch64_r_base4.4._" = "rattler-build build --recipe recipe -m .ci_support/linux_aarch64_r_base4.4._.yaml"
+"inspect-linux_aarch64_r_base4.4._" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_aarch64_r_base4.4._.yaml"
+"build-linux_ppc64le_r_base4.3._" = "rattler-build build --recipe recipe -m .ci_support/linux_ppc64le_r_base4.3._.yaml"
+"inspect-linux_ppc64le_r_base4.3._" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_ppc64le_r_base4.3._.yaml"
+"build-linux_ppc64le_r_base4.4._" = "rattler-build build --recipe recipe -m .ci_support/linux_ppc64le_r_base4.4._.yaml"
+"inspect-linux_ppc64le_r_base4.4._" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_ppc64le_r_base4.4._.yaml"
+"build-osx_64_r_base4.3._" = "rattler-build build --recipe recipe -m .ci_support/osx_64_r_base4.3._.yaml"
+"inspect-osx_64_r_base4.3._" = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_64_r_base4.3._.yaml"
+"build-osx_64_r_base4.4._" = "rattler-build build --recipe recipe -m .ci_support/osx_64_r_base4.4._.yaml"
+"inspect-osx_64_r_base4.4._" = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_64_r_base4.4._.yaml"
+"build-osx_arm64_r_base4.3._" = "rattler-build build --recipe recipe -m .ci_support/osx_arm64_r_base4.3._.yaml"
+"inspect-osx_arm64_r_base4.3._" = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_arm64_r_base4.3._.yaml"
+"build-osx_arm64_r_base4.4._" = "rattler-build build --recipe recipe -m .ci_support/osx_arm64_r_base4.4._.yaml"
+"inspect-osx_arm64_r_base4.4._" = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_arm64_r_base4.4._.yaml"
+"build-win_64_r_base4.3._" = "rattler-build build --recipe recipe -m .ci_support/win_64_r_base4.3._.yaml"
+"inspect-win_64_r_base4.3._" = "inspect_artifacts --recipe-dir recipe -m .ci_support/win_64_r_base4.3._.yaml"
+"build-win_64_r_base4.4._" = "rattler-build build --recipe recipe -m .ci_support/win_64_r_base4.4._.yaml"
+"inspect-win_64_r_base4.4._" = "inspect_artifacts --recipe-dir recipe -m .ci_support/win_64_r_base4.4._.yaml"
 
 [feature.smithy.dependencies]
 conda-smithy = "*"
