--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -8,28 +8,28 @@ jobs:
     vmImage: ubuntu-latest
   strategy:
     matrix:
-      linux_64_r_base4.3:
-        CONFIG: linux_64_r_base4.3
+      linux_64_r_base4.3._:
+        CONFIG: linux_64_r_base4.3._
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
-      linux_64_r_base4.4:
-        CONFIG: linux_64_r_base4.4
+      linux_64_r_base4.4._:
+        CONFIG: linux_64_r_base4.4._
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
-      linux_aarch64_r_base4.3:
-        CONFIG: linux_aarch64_r_base4.3
+      linux_aarch64_r_base4.3._:
+        CONFIG: linux_aarch64_r_base4.3._
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
-      linux_aarch64_r_base4.4:
-        CONFIG: linux_aarch64_r_base4.4
+      linux_aarch64_r_base4.4._:
+        CONFIG: linux_aarch64_r_base4.4._
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
-      linux_ppc64le_r_base4.3:
-        CONFIG: linux_ppc64le_r_base4.3
+      linux_ppc64le_r_base4.3._:
+        CONFIG: linux_ppc64le_r_base4.3._
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
-      linux_ppc64le_r_base4.4:
-        CONFIG: linux_ppc64le_r_base4.4
+      linux_ppc64le_r_base4.4._:
+        CONFIG: linux_ppc64le_r_base4.4._
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
   timeoutInMinutes: 360
