--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -8,17 +8,17 @@ jobs:
     vmImage: macOS-13
   strategy:
     matrix:
-      osx_64_r_base4.3:
-        CONFIG: osx_64_r_base4.3
+      osx_64_r_base4.3._:
+        CONFIG: osx_64_r_base4.3._
         UPLOAD_PACKAGES: 'True'
-      osx_64_r_base4.4:
-        CONFIG: osx_64_r_base4.4
+      osx_64_r_base4.4._:
+        CONFIG: osx_64_r_base4.4._
         UPLOAD_PACKAGES: 'True'
-      osx_arm64_r_base4.3:
-        CONFIG: osx_arm64_r_base4.3
+      osx_arm64_r_base4.3._:
+        CONFIG: osx_arm64_r_base4.3._
         UPLOAD_PACKAGES: 'True'
-      osx_arm64_r_base4.4:
-        CONFIG: osx_arm64_r_base4.4
+      osx_arm64_r_base4.4._:
+        CONFIG: osx_arm64_r_base4.4._
         UPLOAD_PACKAGES: 'True'
   timeoutInMinutes: 360
   variables: {}
