--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -8,11 +8,11 @@ jobs:
     vmImage: windows-2022
   strategy:
     matrix:
-      win_64_r_base4.3:
-        CONFIG: win_64_r_base4.3
+      win_64_r_base4.3._:
+        CONFIG: win_64_r_base4.3._
         UPLOAD_PACKAGES: 'True'
-      win_64_r_base4.4:
-        CONFIG: win_64_r_base4.4
+      win_64_r_base4.4._:
+        CONFIG: win_64_r_base4.4._
         UPLOAD_PACKAGES: 'True'
   timeoutInMinutes: 360
   variables:
