--- a/.ci_support/win_64_r_base4.3._.yaml
+++ b/.ci_support/win_64_r_base4.3._.yaml
@@ -1,39 +1,38 @@
 c_compiler:
-- gcc
-c_compiler_version:
-- '13'
+- vs2019
 c_stdlib:
-- sysroot
-c_stdlib_version:
-- '2.17'
-cdt_name:
-- conda
+- vs
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
-cxx_compiler_version:
-- '13'
-docker_image:
-- quay.io/condaforge/linux-anvil-x86_64:alma9
+- vs2019
 libblas:
 - 3.9.* *netlib
 libcblas:
 - 3.9.* *netlib
 liblapack:
 - 3.9.* *netlib
+m2w64_c_compiler:
+- gcc
+m2w64_c_compiler_version:
+- '13'
+m2w64_c_stdlib:
+- m2w64-sysroot
+m2w64_c_stdlib_version:
+- '12'
+m2w64_cxx_compiler:
+- gxx
+m2w64_cxx_compiler_version:
+- '13'
 pin_run_as_build:
   r-base:
     min_pin: x.x
     max_pin: x.x
 r_base:
-- '4.3'
+- 4.3.*
 target_platform:
-- linux-64
-zip_keys:
-- - c_compiler_version
-  - cxx_compiler_version
+- win-64
 zlib:
 - '1'
