would help if i remembered the then

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -43,6 +43,7 @@ requirements:
         - r-rcpparmadillo
         - r-matrix
     - if: unix
+      then:
         - gnuconfig
         - git
         - diffutils
