--- a/.ci_support/win_64_r_base4.3.yaml
+++ b/.ci_support/win_64_r_base4.3.yaml
@@ -1,27 +1,13 @@
-c_compiler:
-- vs2019
-c_stdlib:
-- vs
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
-cxx_compiler:
-- vs2019
-libblas:
-- 3.9.* *netlib
-libcblas:
-- 3.9.* *netlib
-liblapack:
-- 3.9.* *netlib
+cran_mirror:
+- https://cran.r-project.org
 m2w64_c_compiler:
 - gcc
 m2w64_c_compiler_version:
 - '13'
-m2w64_c_stdlib:
-- m2w64-sysroot
-m2w64_c_stdlib_version:
-- '12'
 m2w64_cxx_compiler:
 - gxx
 m2w64_cxx_compiler_version:
@@ -31,8 +17,6 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 r_base:
-- 4.3.*
+- '4.3'
 target_platform:
 - win-64
-zlib:
-- '1'
