--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,6 +41,11 @@ requirements:
     - {{ posix }}coreutils         # [win]
     - {{ posix }}zip               # [win]
     - cross-r-base {{ r_base }}    # [build_platform != target_platform]
+    - r-matrix                     # [build_platform != target_platform]
+    - r-rcpp                       # [build_platform != target_platform]
+    - r-rcpparmadillo              # [build_platform != target_platform]
+    - r-rcppprogress               # [build_platform != target_platform]
+    - r-hdf5r.extra                # [build_platform != target_platform]
   host:
     - r-base
     - r-matrix
