--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -53,8 +53,7 @@ requirements:
     - r-rcpparmadillo
     - r-rcppprogress
     - r-hdf5r.extra
-    - libcblas  # [not (osx and arm64)]
-    - libcblas * *accelerate  # [osx and arm64]
+    - libcblas
     - llvm-openmp  # [osx]
     - libgomp  # [not osx]
     - libplanc * mingw*  # [win]
