--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -70,6 +70,7 @@ requirements:
     - r-rcppprogress
     - r-hdf5r.extra
     - libblas  # [not (osx and arm64)]
+    - libblas * *accelerate  # [osx and arm64]
     - libcblas * *accelerate  # [osx and arm64]
     - libgcc <15  # [win]
     - libgomp <15  # [win]
