--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -55,7 +55,9 @@ requirements:
     - r-rcpparmadillo
     - r-rcppprogress
     - r-hdf5r.extra
+    - libblas
     - libcblas
+    - liblapack
     - libgcc <15  # [win]
     - libgomp <15  # [win]
     - llvm-openmp  # [osx]
@@ -71,7 +73,6 @@ requirements:
     - r-hdf5r.extra
     - libblas  # [not (osx and arm64)]
     - libblas * *accelerate  # [osx and arm64]
-    - libcblas * *accelerate  # [osx and arm64]
     - libgcc <15  # [win]
     - libgomp <15  # [win]
 
