be compatible with libplanc run deps

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -55,9 +55,12 @@ requirements:
     - r-rcpparmadillo
     - r-rcppprogress
     - r-hdf5r.extra
-    - libblas
-    - libcblas
-    - liblapack
+    - libblas  # [not (osx and arm64)]
+    - libblas * *accelerate  # [osx and arm64]
+    - libcblas  # [not (osx and arm64)]
+    - libcblas * *accelerate  # [osx and arm64]
+    - liblapack  # [not (osx and arm64)]
+    - liblapack * *accelerate  # [osx and arm64]
     - libgcc <15  # [win]
     - libgomp <15  # [win]
     - llvm-openmp  # [osx]
